--- a/themes/github.com/wowchemy/wowchemy-hugo-modules/wowchemy/v5/assets/scss/custom.scss
+++ b/themes/github.com/wowchemy/wowchemy-hugo-modules/wowchemy/v5/assets/scss/custom.scss
@@ -1,1 +1,8 @@
 // Override this file to add your own SCSS styling.
+.MathJax {
+  overflow-x: auto; /* Horizontally scroll long equations. */
+}
+
+.article-container {
+   max-width: 80%;
+}
